--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <head>
     <title>City Center</title>
-    <link type="text/css" rel="stylesheet" href="R:\city center\citycss.css" />
+    <link type="text/css" rel="stylesheet" href="citycss.css" />
     <img
       id="bgimg"
       background-image:
