--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
   <head>
     <title>City Center</title>
     <link type="text/css" rel="stylesheet" href="citycss.css" />
-    <img
-      id="bgimg"
-      background-image:
-      src="R:\city center\CC-Aleandria-Eng.png"
-    />
+    <img id="bgimg" background-image: src="CC-Aleandria-Eng.png" />
   </head>
 
   <body>
