--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="wh">How can we help you?</div>
 
     <div id="main">
-      <button id="lost" class="but">lost and found</button>
-      <button id="security" class="but">security</button>
+      <button onclick="calllost()" id="lost" class="but">lost and found</button>
+      <button onclick="callsec()" id="security" class="but">security</button>
     </div>
   </body>
 </html>
