--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
   <body>
     <div id="wh">How can we help you?</div>
-
+    <div id="new11"></div>
+    <div id="new1"></div>
     <div id="main">
-      <button onclick="calllost()" id="lost" class="but">lost and found</button>
+      <button onclick="calllost()" name="lostt" id="lost" class="but">
+        lost and found
+      </button>
       <button onclick="callsec()" id="security" class="but">security</button>
     </div>
+
+    <div id="new22"></div>
+    <div id="new2"></div>
   </body>
 </html>
