--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <head>
     <title>City Center</title>
     <link type="text/css" rel="stylesheet" href="citycss.css" />
-    <img id="bgimg" background-image: src="CC-Aleandria-Eng.png" />
   </head>
 
   <body>
-    <div id="wh">How can we help you?</div>
+    <div id="header">
+      <div id="wh">How can we help you?</div>
+    </div>
     <div id="new11"></div>
     <div id="new1"></div>
     <div id="main">
