--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <img id="bgimg" src="CC-Aleandria-Eng.png" />
+
     <div id="header">
       <div id="wh">How can we help you?</div>
     </div>
