--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <div id="main">
         <div id="but1">
-          <div id="spare">
-          </div>
+          <!-- <div id="spare">
+          </div> -->
           <div id="new11"></div>
           <div id="new1"></div>
           <div id="butt1">
