--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-      <!-- <img id="bgimg" src="bg.png" /> -->
+      <img id="bgimg" src="bg.png" />
       <div>
       <div id="wh">How can we help you?</div>
       </div>
