--- a/index.html
+++ b/index.html
@@ -1,48 +1,43 @@
 <!DOCOTYPE html>
-  <script type="text/javascript" src="func.js" defer></script>
-  <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<script type="text/javascript" src="func.js" defer></script>
+<html>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <head>
-      <title>City Center</title>
-      <link type="text/css" rel="stylesheet" href="citycss.css" />
-    </head>
+  <head>
+    <title>City Center</title>
+    <link type="text/css" rel="stylesheet" href="citycss.css" />
+  </head>
 
-    <body>
-      <img id="bgimg" src="bg.png" />
-      <div>
+  <body>
+    <div>
       <div id="wh">How can we help you?</div>
-      </div>
-      <div id="main">
-        <div id="but1">
-          <!-- <div id="spare">
-          </div> -->
-          <div id="new11"></div>
-          <div id="new1"></div>
-          <div id="butt1">
-            <div id="span">
-              <button onclick="calllost()" name="lostt" id="lost" class="but">
-                lost and found
-              </button>
-            </div>
-          </div>
-        </div>
-        <div id="but2">
-          <div id="butt2">
-            <div id="span">
-              <button onclick="callsec()" id="security" class="but">
-                security
-              </button>
-            </div>
-          </div>
-          <div id="new22">
-          </div>
-          <div id="new2"></div>
-          <div id="imgg">
-            <img id="img" src="CC-Aleandria-Eng.png"/>
+    </div>
+    <div id="main">
+      <div id="but1">
+        <div id="new11"></div>
+        <div id="new1"></div>
+        <div id="butt1">
+          <div id="span">
+            <button onclick="calllost()" name="lostt" id="lost" class="but">
+              lost and found
+            </button>
           </div>
         </div>
       </div>
-    </body>
-  </html>
-</DOCOTYPE>
+      <div id="but2">
+        <div id="butt2">
+          <div id="spann">
+            <button onclick="callsec()" id="security" class="but">
+              security
+            </button>
+          </div>
+        </div>
+        <div id="new22"></div>
+        <div id="news2">
+          <img id="img" src="cc.jpg" />
+        </div>
+        <!-- <div id="imgg"></div> -->
+      </div>
+    </div>
+  </body>
+</html>
