--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </button>
           </div>
         </div>
-        <div id="new11"></div>
-        <div id="new1"></div>
+        <!-- <div id="new11"></div>
+        <div id="new1"></div> -->
       </div>
       <div id="but2">
         <div id="butt2">
@@ -32,9 +32,10 @@
             </button>
           </div>
         </div>
-        <div id="new22"></div>
-        <div id="new2"></div>
+        <!-- <div id="new22"></div>
+        <div id="new2"></div> -->
       </div>
     </div>
+    <img src="ENG.png" id="img" />
   </body>
 </html>
