--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="butt1">
           <div id="span">
             <button onclick="calllost()" name="lostt" id="lost" class="but">
-              lost and found
+              Lost and found
             </button>
           </div>
         </div>
@@ -26,7 +26,7 @@
         <div id="butt2">
           <div id="spann">
             <button onclick="callsec()" id="security" class="but">
-              security
+              Security
             </button>
           </div>
         </div>
