--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="butt1">
           <div id="span">
             <button onclick="calllost()" name="lostt" id="lost" class="but">
-              Lost and found
+              Lost and Found
             </button>
           </div>
         </div>
